Fix scrollbars and remove extra files
- Remove horizontal scrollbar in excavation context pages and Appendix A
(by wrapping the "row" div in a "container-fluid" div)
- Make scrollbar of modals display properly by removing the overflow-x
rule on <html> and <body>
- Remove extra CSS file inclusions in textpages
- Remove bootstrap.css (as only bootstrap.min.css is used) and
excavation_artifact_tables.css (replaced by styling on Appendix A pages)

--- a/src/generate_new_site/assets/css/styles.css
+++ b/src/generate_new_site/assets/css/styles.css
@@ -1,7 +1,3 @@
-html, body {
-  overflow-x: hidden !important;
-}
-
 .card-header {
   font-family: 'Lithos Pro';
   background-color: #202151 !important;
@@ -11,11 +7,6 @@ html, body {
 /* Remove gap between header and top of the browser */
 #h-card {
   border: 0;
-}
-
-/* Remove extra scrollbar that appears when opening a modal */
-body.modal-open {
-  padding-right: 0 !important;
 }
 
 .mb-0 {
